tests/dataset/tpc-ds/compiler/rust/q47.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/q47.rs:35:106
   |
35 | ...sales: 60.0 }, V2 { d_year: 2020, item: "A", avg_monthly_sales: 100.0, sum_sales: 120.0 }]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result`, found `V2`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
